--- a/css/top.css
+++ b/css/top.css
@@ -16,6 +16,14 @@ body {
     overflow-wrap: break-word;
     box-sizing: border-box;
 }
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: #f7f7f7;
+}
+
 
 a {
     text-decoration: none;
@@ -28,8 +36,7 @@ a:hover {
 .wrapper {
     background-color: #fff;
     width: 80%;
-    margin: 0 auto;
-    margin-top: 50px;
+    margin: 30px auto;
     padding: 20px;
     max-width: 100%;
     height: inherit;
@@ -39,18 +46,18 @@ a:hover {
 
 .container {
     margin: 0 auto;
-    width: 90%;
+    width: 80%;
 }
 
 .head {
-    margin-left: 10%;
+    margin: 20px 0;
     font-weight:bold;
 }
 
 .headWrap {
     margin: 0 auto;
     margin-bottom: 30px;
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
@@ -61,6 +68,63 @@ a:hover {
 
 .right {
     display: flex;
+}
+
+.middleWrap {
+    width: 100%;
+    padding: 10px;
+    margin: 0 auto;
+    height: auto;
+    display: flex;
+    flex-flow: column;
+}
+
+.midTop {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 30px;
+}
+
+.midLeft {
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
+    border: 1px solid #333;
+    margin: 5px;
+}
+
+.midLeft:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.text {
+    color: #333;
+}
+
+.about {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.photo {
+    width: 45%;
+}
+
+.img {
+    width: 90%;
+    border-radius: 90px;
+}
+
+.description {
+    width: 45%;
+}
+
+.abouttext {
+    margin-top: 18px;
+    line-height: 30px;
 }
 
 .title {
@@ -95,4 +159,5 @@ th, td {
 
 li {
     margin: 10px;
+    
 }
